# AlmostEngine

./: .gitignore  .gitmodules  BuildEngine.py  CMakeLists.txt  CompileShaders.cmake  GenerateVSProjects.py  GenerateVSProjects_Clang.py  GenerateVSProjects_MSVC.py  README.md  build_3rdParty.bat  dxc.cmake  regen.bat
Apps/AlmostViewer/: CMakeLists.txt
Apps/AlmostViewer/Data/: arrowX.gltf  arrowZ.gltf  axes.gltf
Apps/AlmostViewer/Src/: AlmostViewerApp.cpp  main.cpp
Apps/AlmostViewer/Src/UI/: StructureUI.cpp  StructureUI.h
Apps/Outdoors/: CMakeLists.txt
Apps/Outdoors/Data/: arrowY.gltf
Apps/Outdoors/Src/: OutdoorsApp.cpp  OutdoorsUI.cpp  OutdoorsUI.h  main.cpp
Core/: CMakeLists.txt
Core/Include/Core/: BitSetAllocator.h  Blob.h  ComPtr.h  Common.h  CompilerHelpers.h  Core.h  CorePCH.h  File.h  Log.h  Math.h  Memory.h  Noise.h  RingBuffer.h  Signal.h  stable_vector.h  static_vector.h  unique_stable_vector.h  unique_vector.h
Core/Include/Core/Math/: aabox.h  frustum.h  glm_config.h  plane.h
Core/Src/: CorePCH.cpp  CorePCH.h
Core/Src/Core/: BitSetAllocator.cpp  Common.cpp  File.cpp  Log.cpp  Noise.cpp
Framework/: CMakeLists.txt
Framework/Include/Framework/: App.h  CameraController.h  FrameworkPCH.h  FrameworkUI.h
Framework/Include/Framework/UI/: FrameworkUI.h
Framework/Src/Framework/: App.cpp  CameraController.cpp  FrameworkPCH.cpp  FrameworkUI.cpp
Framework/Src/Framework/UI/: FrameworkUI.cpp
Gfx/: CMakeLists.txt
Gfx/Include/Gfx/: Camera.h  CommonResources.h  DataUploader.h  DeviceManager.h  EHdrImageLoader.h  FrameUniformBuffer.h  GfxPCH.h  GltfImporter.h  GpuSceneBuffers.h  GpuSceneBuffersHandle.h  Heightmap.h  HeightmapInstance.h  HeightmapSource.h  IRenderable.h  ImGUIViewportsRenderer.h  ImageHeightmapSource.h  LoadedTexture.h  Material.h  MaterialDomain.h  MaterialFactory.h  MaterialPassRenderer.h  Mesh.h  MeshInstance.h  MouseState.h  MultiBuffer.cpp  MultiBuffer.h  NoiseHeightmapSource.h  RenderContext.cpp  RenderContext.h  RenderGraph.h  RenderGraphBuilder.h  RenderGraphTypes.h  RenderHelpers.h  RenderSet.h  RenderStage.h  RenderStageFactory.cpp  RenderStageFactory.h  RenderStageType.h  RenderView.h  RenderViewContext.h  (+24 more)
Gfx/Include/Gfx/Math/: Util.h
Gfx/Include/Gfx/RenderStages/: BloomRenderStage.h  CloudsRenderStage.h  CompositeRenderStage.h  DebugRenderStage.h  DeferredBaseRenderStage.h  DeferredLightingRenderStage.h  DepthPrepassRenderStage.h  GBuffersRenderStage.h  ImGuiRenderStage.h  ImGuiViewportRenderStage.h  LinearizeDepthRenderStage.h  OpaqueRenderStage.h  SSAORenderStage.h  ShadowmapRenderStage.h  SimpleSkyRenderStage.h  SkyRenderStage.h  ToneMappingRenderStage.h  WBOITAccumRenderStage.h  WBOITResolveRenderStage.h  WireframeRenderStage.h
Gfx/Shaders/: AABOX_vs.hlsl  ACES.hlsli  AvgLuminanceHistogram_cs.hlsl  BRDF.hlsli  BilateralBlurH_cs.hlsl  BilateralBlurV_cs.hlsl  BilateralBlur_cs.hlsli  BindlessRS.hlsli  Blit_cs.hlsl  Blit_ps.hlsl  BloomDownsample_ps.hlsl  BloomMix_ps.hlsl  BloomUpsample_ps.hlsl  BlurSeparable_cs.hlsl  BuildLuminanceHistogram_cs.hlsl  CascadeShadowmap_AT_CO_ps.hlsl  CascadeShadowmap_AT_CO_vs.hlsl  CascadeShadowmap_AT_ps.hlsl  CascadeShadowmap_AT_vs.hlsl  CascadeShadowmap_OP_CO_ps.hlsl  CascadeShadowmap_OP_CO_vs.hlsl  CascadeShadowmap_OP_ps.hlsl  CascadeShadowmap_OP_vs.hlsl  CascadeShadowmap_Terrain_vs.hlsl  CascadeShadowmap_ps.hlsl  CascadeShadowmap_ps.hlsli  CascadeShadowmap_vs.hlsl  CascadeShadowmap_vs.hlsli  ClearBuffer_cs.hlsl  ClearTexture_cs.hlsl  Clouds_ps.hlsl  Color.hlsli  Common.hlsli  Composite_ps.hlsl  Debug_cs.hlsl  DeferredBase_ps.hlsl  DeferredBase_vs.hlsl  DeferredLighting_ps.hlsl  DepthPrepass_AT_ps.hlsl  DepthPrepass_AT_vs.hlsl  (+46 more)
Gfx/Shaders/Interop/: Binding.h  ImGUI_CB.h  Interop.h  RenderResources.h
Gfx/Shaders/sh2/: s2h_3d.hlsl  s2h_scatter.hlsl
Gfx/Src/Gfx/: Camera.cpp  CommonResources.cpp  DataUploader.cpp  DeviceManager.cpp  EHdrImageLoader.cpp  FrameUniformBuffer.cpp  GltfImporter.cpp  GpuSceneBuffers.cpp  GpuSceneBuffers.h  Heightmap.cpp  HeightmapInstance.cpp  ImGUIViewportsRenderer.cpp  ImageHeightmapSource.cpp  Material.cpp  MaterialFactory.cpp  MaterialPassRenderer.cpp  Mesh.cpp  MeshInstance.cpp  MultiBuffer.cpp  NoiseHeightmapSource.cpp  RenderContext.cpp  RenderGraph.cpp  RenderGraphBuilder.cpp  RenderHelpers.cpp  RenderStage.cpp  RenderStageFactory.cpp  RenderView.cpp  Scene.cpp  SceneCamera.cpp  SceneGraph.cpp  SceneGraphLeaf.cpp  SceneGraphNode.cpp  SceneHeightmap.cpp  SceneHeigthmap.cpp  ShaderFactory.cpp  TextureCache.cpp  TextureLoader.cpp  UploadBuffer.cpp  Util.cpp
Gfx/Src/Gfx/RenderStages/: BloomRenderStage.cpp  CloudsRenderStage.cpp  CompositeRenderStage.cpp  DebugRenderStage.cpp  DeferredBaseRenderStage.cpp  DeferredLightingRenderStage.cpp  DepthPrepassRenderStage.cpp  GBuffersRenderStage.cpp  ImGuiRenderStage.cpp  ImGuiViewportRenderStage.cpp  LinearizeDepthRenderStage.cpp  OpaqueRenderStage.cpp  SSAORenderStage.cpp  ShadowmapRenderStage.cpp  SimpleSkyRenderStage.cpp  SkyRenderStage.cpp  ToneMappingRenderStage.cpp  WBOITAccumRenderStage.cpp  WBOITResolveRenderStage.cpp  WireframeRenderStage.cpp
RHI/: CMakeLists.txt
RHI/Include/RHI/: Barriers.h  BlendState.h  Buffer.h  CommandList.h  Common.h  DepthStencilState.h  Descriptors.h  Device.h  DxgiFormatMapping.h  Fence.h  Format.h  Framebuffer.h  InputLayout.h  NativeResource.h  PipelineState.h  RHI_PCH.h  RasterizerState.h  Resource.h  ResourceState.h  Shader.h  ShaderCompiler.h  ShaderViews.h  Texture.h  TimerQuery.h  TypeForwards.h  Viewport.h
RHI/Include/RHI/dx12/: DescriptorHeap.h  Device.h  GpuDevice.h  (+2 more)
RHI/Src/RHI/: Barriers.cpp  DxgiFormatMapping.cpp  Format.cpp  Framebuffer.cpp  RHI_PCH.cpp  Resource.cpp  ShaderCompiler.cpp  Texture.cpp
Shaders/: AABOX_ps.hlsl  AABOX_vs.hlsl  BindlessRS.hlsli  Blit_ps.hlsl  CMakeLists.txt  CompileShaders.cmake  ForwardRP_ps.hlsl  ForwardRP_vs.hlsl  OpaqueStage_ps.hlsl  OpaqueStage_vs.hlsl  Triangle_vs.hlsl  imgui_bindless_ps.hlsl  imgui_bindless_vs.hlsl
Shaders/Interop/: ConstantBuffers.h  ForwardRP.h  Interop.h  RenderResources.h
Shaders/Src/: imgui_vs.hlsl
(+260 files in other folders)
